// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-plugin resource all returns an array of plugins 1`] = `
Array [
  Object {
    "id": "gatsby-source-filesystem",
    "name": "gatsby-source-filesystem",
  },
  Object {
    "id": "gatsby-transformer-sharp",
    "name": "gatsby-transformer-sharp",
  },
  Object {
    "id": "gatsby-plugin-emotion",
    "name": "gatsby-plugin-emotion",
  },
  Object {
    "id": "gatsby-plugin-typography",
    "name": "gatsby-plugin-typography",
  },
  Object {
    "id": "gatsby-transformer-remark",
    "name": "gatsby-transformer-remark",
  },
  Object {
    "id": "gatsby-plugin-sharp",
    "name": "gatsby-plugin-sharp",
  },
  Object {
    "id": "gatsby-plugin-google-analytics",
    "name": "gatsby-plugin-google-analytics",
  },
  Object {
    "id": "gatsby-plugin-manifest",
    "name": "gatsby-plugin-manifest",
  },
  Object {
    "id": "gatsby-plugin-offline",
    "name": "gatsby-plugin-offline",
  },
  Object {
    "id": "gatsby-plugin-react-helmet",
    "name": "gatsby-plugin-react-helmet",
  },
]
`;

exports[`gatsby-plugin resource e2e plugin resource test: GatsbyPlugin create 1`] = `
Object {
  "id": "gatsby-plugin-foo",
  "name": "gatsby-plugin-foo",
}
`;

exports[`gatsby-plugin resource e2e plugin resource test: GatsbyPlugin create plan 1`] = `
Object {
  "currentState": "const redish = \`#c5484d\`
module.exports = {
  siteMetadata: {
    title: \`Bricolage\`,
    author: \`Kyle Mathews\`,
    homeCity: \`San Francisco\`,
  },
  plugins: [
    {
      resolve: \`gatsby-source-filesystem\`,
      options: {
        path: \`\${__dirname}/src/pages\`,
        name: \`pages\`,
      },
    },
    \`gatsby-transformer-sharp\`,
    \`gatsby-plugin-emotion\`,
    {
      resolve: \`gatsby-plugin-typography\`,
      options: {
        pathToConfigModule: \`src/utils/typography\`,
      },
    },
    {
      resolve: \`gatsby-transformer-remark\`,
      options: {
        plugins: [
          {
            resolve: \`gatsby-remark-images\`,
            options: {
              maxWidth: 590,
            },
          },
          {
            resolve: \`gatsby-remark-responsive-iframe\`,
            options: {
              wrapperStyle: \`margin-bottom: 1.0725rem\`,
            },
          },
          \`gatsby-remark-prismjs\`,
          \`gatsby-remark-copy-linked-files\`,
          \`gatsby-remark-smartypants\`,
        ],
      },
    },
    \`gatsby-plugin-sharp\`,
    {
      resolve: \`gatsby-plugin-google-analytics\`,
      options: {
        trackingId: \`UA-774017-3\`,
      },
    },
    {
      resolve: \`gatsby-plugin-manifest\`,
      options: {
        name: \`Bricolage\`,
        short_name: \`Bricolage\`,
        icon: \`static/logo.png\`,
        start_url: \`/\`,
        background_color: redish,
        theme_color: redish,
        display: \`minimal-ui\`,
      },
    },
    \`gatsby-plugin-offline\`, // \`gatsby-plugin-preact\`,
    \`gatsby-plugin-react-helmet\`,
  ],
}
",
  "describe": "Configure gatsby-plugin-foo",
  "id": "gatsby-plugin-foo",
  "name": "gatsby-plugin-foo",
  "newState": "const redish = \`#c5484d\`;
module.exports = {
  siteMetadata: {
    title: \`Bricolage\`,
    author: \`Kyle Mathews\`,
    homeCity: \`San Francisco\`
  },
  plugins: [{
    resolve: \`gatsby-source-filesystem\`,
    options: {
      path: \`\${__dirname}/src/pages\`,
      name: \`pages\`
    }
  }, \`gatsby-transformer-sharp\`, \`gatsby-plugin-emotion\`, {
    resolve: \`gatsby-plugin-typography\`,
    options: {
      pathToConfigModule: \`src/utils/typography\`
    }
  }, {
    resolve: \`gatsby-transformer-remark\`,
    options: {
      plugins: [{
        resolve: \`gatsby-remark-images\`,
        options: {
          maxWidth: 590
        }
      }, {
        resolve: \`gatsby-remark-responsive-iframe\`,
        options: {
          wrapperStyle: \`margin-bottom: 1.0725rem\`
        }
      }, \`gatsby-remark-prismjs\`, \`gatsby-remark-copy-linked-files\`, \`gatsby-remark-smartypants\`]
    }
  }, \`gatsby-plugin-sharp\`, {
    resolve: \`gatsby-plugin-google-analytics\`,
    options: {
      trackingId: \`UA-774017-3\`
    }
  }, {
    resolve: \`gatsby-plugin-manifest\`,
    options: {
      name: \`Bricolage\`,
      short_name: \`Bricolage\`,
      icon: \`static/logo.png\`,
      start_url: \`/\`,
      background_color: redish,
      theme_color: redish,
      display: \`minimal-ui\`
    }
  }, \`gatsby-plugin-offline\`, // \`gatsby-plugin-preact\`,
  \`gatsby-plugin-react-helmet\`, \\"gatsby-plugin-foo\\"]
};",
}
`;

exports[`gatsby-plugin resource e2e plugin resource test: GatsbyPlugin destroy 1`] = `undefined`;

exports[`gatsby-plugin resource e2e plugin resource test: GatsbyPlugin update 1`] = `
Object {
  "id": "gatsby-plugin-foo",
  "name": "gatsby-plugin-foo",
}
`;

exports[`gatsby-plugin resource e2e plugin resource test: GatsbyPlugin update plan 1`] = `
Object {
  "currentState": "const redish = \`#c5484d\`;
module.exports = {
  siteMetadata: {
    title: \`Bricolage\`,
    author: \`Kyle Mathews\`,
    homeCity: \`San Francisco\`
  },
  plugins: [{
    resolve: \`gatsby-source-filesystem\`,
    options: {
      path: \`\${__dirname}/src/pages\`,
      name: \`pages\`
    }
  }, \`gatsby-transformer-sharp\`, \`gatsby-plugin-emotion\`, {
    resolve: \`gatsby-plugin-typography\`,
    options: {
      pathToConfigModule: \`src/utils/typography\`
    }
  }, {
    resolve: \`gatsby-transformer-remark\`,
    options: {
      plugins: [{
        resolve: \`gatsby-remark-images\`,
        options: {
          maxWidth: 590
        }
      }, {
        resolve: \`gatsby-remark-responsive-iframe\`,
        options: {
          wrapperStyle: \`margin-bottom: 1.0725rem\`
        }
      }, \`gatsby-remark-prismjs\`, \`gatsby-remark-copy-linked-files\`, \`gatsby-remark-smartypants\`]
    }
  }, \`gatsby-plugin-sharp\`, {
    resolve: \`gatsby-plugin-google-analytics\`,
    options: {
      trackingId: \`UA-774017-3\`
    }
  }, {
    resolve: \`gatsby-plugin-manifest\`,
    options: {
      name: \`Bricolage\`,
      short_name: \`Bricolage\`,
      icon: \`static/logo.png\`,
      start_url: \`/\`,
      background_color: redish,
      theme_color: redish,
      display: \`minimal-ui\`
    }
  }, \`gatsby-plugin-offline\`, // \`gatsby-plugin-preact\`,
  \`gatsby-plugin-react-helmet\`, \\"gatsby-plugin-foo\\"]
};",
  "describe": "Configure gatsby-plugin-foo",
  "id": "gatsby-plugin-foo",
  "name": "gatsby-plugin-foo",
  "newState": "const redish = \`#c5484d\`;
module.exports = {
  siteMetadata: {
    title: \`Bricolage\`,
    author: \`Kyle Mathews\`,
    homeCity: \`San Francisco\`
  },
  plugins: [{
    resolve: \`gatsby-source-filesystem\`,
    options: {
      path: \`\${__dirname}/src/pages\`,
      name: \`pages\`
    }
  }, \`gatsby-transformer-sharp\`, \`gatsby-plugin-emotion\`, {
    resolve: \`gatsby-plugin-typography\`,
    options: {
      pathToConfigModule: \`src/utils/typography\`
    }
  }, {
    resolve: \`gatsby-transformer-remark\`,
    options: {
      plugins: [{
        resolve: \`gatsby-remark-images\`,
        options: {
          maxWidth: 590
        }
      }, {
        resolve: \`gatsby-remark-responsive-iframe\`,
        options: {
          wrapperStyle: \`margin-bottom: 1.0725rem\`
        }
      }, \`gatsby-remark-prismjs\`, \`gatsby-remark-copy-linked-files\`, \`gatsby-remark-smartypants\`]
    }
  }, \`gatsby-plugin-sharp\`, {
    resolve: \`gatsby-plugin-google-analytics\`,
    options: {
      trackingId: \`UA-774017-3\`
    }
  }, {
    resolve: \`gatsby-plugin-manifest\`,
    options: {
      name: \`Bricolage\`,
      short_name: \`Bricolage\`,
      icon: \`static/logo.png\`,
      start_url: \`/\`,
      background_color: redish,
      theme_color: redish,
      display: \`minimal-ui\`
    }
  }, \`gatsby-plugin-offline\`, // \`gatsby-plugin-preact\`,
  \`gatsby-plugin-react-helmet\`, \\"gatsby-plugin-foo\\"]
};",
}
`;
